--- a/01-Fundamentals-Part-1/starter/index.html
+++ b/01-Fundamentals-Part-1/starter/index.html
@@ -24,7 +24,15 @@
       color: white;
     }
   </style>
+
+  <script>
+    let js = "amazing";
+    if (js == "amazing") alert("Hi Christine!");
+  </script>
+
 </head>
+
+
 
 <body>
   <h1>JavaScript Fundamentals – Part 1</h1>
