--- a/01-Fundamentals-Part-1/starter/index.html
+++ b/01-Fundamentals-Part-1/starter/index.html
@@ -24,18 +24,16 @@
       color: white;
     }
   </style>
-
-  <script>
-    let js = "amazing";
-    if (js == "amazing") alert("Hi Christine!");
-  </script>
-
 </head>
 
 
 
 <body>
   <h1>JavaScript Fundamentals – Part 1</h1>
+  <!-- Link JS File to the HTML file. You want to do it at the end, close to body tag -->
+  <!-- usually you put in the body section-->
+  <script> src = "script.js" </script>
+
 </body>
 
 </html>
