added more notes

--- a/01-Fundamentals-Part-1/starter/index.html
+++ b/01-Fundamentals-Part-1/starter/index.html
@@ -11,7 +11,7 @@
       height: 100vh;
       display: flex;
       align-items: center;
-      background: linear-gradient(to top left, #28b487, #7dd56f);
+      background: linear-gradient(to top left, #6e7472, #202120);
     }
 
     h1 {
@@ -31,9 +31,8 @@
 <body>
   <h1>JavaScript Fundamentals – Part 1</h1>
   <!-- Link JS File to the HTML file. You want to do it at the end, close to body tag -->
-  <!-- usually you put in the body section-->
-  <script> src = "script.js" </script>
-
+  <!-- usually you put in the body section, end of it-->
+  <script src="02_data_types.js"> </script>
 </body>
 
 </html>
