--- a/01-Fundamentals-Part-1/starter/index.html
+++ b/01-Fundamentals-Part-1/starter/index.html
@@ -32,7 +32,7 @@
   <h1>JavaScript Fundamentals – Part 1</h1>
   <!-- Link JS File to the HTML file. You want to do it at the end, close to body tag -->
   <!-- usually you put in the body section, end of it-->
-  <script src="02_data_types.js"> </script>
+  <script src="04_operators.js"> </script>
 </body>
 
 </html>
