added many more documents

--- a/01-Fundamentals-Part-1/final/index_macs.html
+++ b/01-Fundamentals-Part-1/final/index_macs.html
@@ -26,16 +26,7 @@
   <body>
     <h1>JavaScript Fundamentals – Part 1</h1>
 
-    <!-- JS to dynamically add script tags with long paths-->
-     <script>
-     function addScript(path) {
-      var script = document.createElement('script');
-      script.src = path;
-      document.body.appendChild(script)
-     }
-
-     addScript("C:/Users/chris/OneDrive/Documents/VSCode/complete-js-course/" +
-     "complete-javascript-course/01-Fundamentals-Part-1/starter/11_boolean.js");
-    </script>
+    <!-- Use this when coding on your mac, it will work -->
+     <script src = "01_variables.js"></script>
   </body>
 </html>
