--- a/02-Fundamentals-Part-2/starter/index.html
+++ b/02-Fundamentals-Part-2/starter/index.html
@@ -25,6 +25,6 @@
   </head>
   <body>
     <h1>JavaScript Fundamentals – Part 2</h1>
-    <script src="script.js"></script>
+    <script src="03_func_decl.js"></script>
   </body>
 </html>
