--- a/02-Fundamentals-Part-2/starter/index.html
+++ b/02-Fundamentals-Part-2/starter/index.html
@@ -25,6 +25,6 @@
   </head>
   <body>
     <h1>JavaScript Fundamentals – Part 2</h1>
-    <script src="13_loops.js"></script>
+    <script src="14_moreloops.js"></script>
   </body>
 </html>
