--- a/03-Developer-Skills/starter/index.html
+++ b/03-Developer-Skills/starter/index.html
@@ -25,6 +25,6 @@
   </head>
   <body>
     <h1>Developer Skills & Editor Setup</h1>
-    <script src="config_JS.js"></script>
+    <script src="debug_challenge.js"></script>
   </body>
 </html>
