--- a/08-Behind-the-Scenes/starter/index.html
+++ b/08-Behind-the-Scenes/starter/index.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <h1>How JavaScript Works Behind the Scenes</h1>
-    <script src="script.js"></script>
+    <script src="01_script.js"></script>
   </body>
 </html>
 
